[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
aws-sdk-rds = "0.27"                               # Check for the latest version
dotenvy = "0.15"
diesel = { version = "2.0", features = ["mysql"] }
tokio = { version = "1", features = ["full"] }
